--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,16 @@ find_package(SDL2 REQUIRED COMPONENTS main)
 find_package(SDL2_image REQUIRED)
 
 include_directories(${SDL2_INCLUDE_DIR})
+include_directories(${SDL2_image_INCLUDE_DIR})
 
+# Lesson 1, 2, 3, 4, 5
 add_executable(TestSDL2 "src/TestSDL2.cpp")
 target_link_libraries(TestSDL2 ${SDL2_LIBRARY})
 
+# Lesson 6
 add_executable(TestSDL2_image "src/TestSDL2_image.cpp")
-target_include_directories(TestSDL2_image PRIVATE ${SDL2_image_INCLUDE_DIR})
 target_link_libraries(TestSDL2_image ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
 
+# Lesson 7, 8, 9
 add_executable(TestTexture "src/TestTexture.cpp")
-target_include_directories(TestTexture PRIVATE ${SDL2_image_INCLUDE_DIR})
 target_link_libraries(TestTexture ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
