--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,7 @@ target_link_libraries(TestColorKeying ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
 # Lesson 11, 12, 13
 add_executable(TestClipRendering "src/TestClipRendering.cpp")
 target_link_libraries(TestClipRendering ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
+
+# Lesson 14
+add_executable(TestVSync "src/TestVSync.cpp")
+target_link_libraries(TestVSync ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
