--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,11 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 find_package(SDL2 REQUIRED COMPONENTS main)
 find_package(SDL2_image REQUIRED)
+find_package(SDL2_ttf REQUIRED)
 
 include_directories(${SDL2_INCLUDE_DIR})
 include_directories(${SDL2_image_INCLUDE_DIR})
+include_directories(${SDL2_ttf_INCLUDE_DIR})
 
 # Lesson 1, 2, 3, 4, 5
 add_executable(TestBasicSDL2 "src/TestBasicSDL2.cpp")
@@ -27,9 +29,9 @@ target_link_libraries(TestBasicRendering ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
 add_executable(TestColorKeying "src/TestColorKeying.cpp")
 target_link_libraries(TestColorKeying ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
 
-# Lesson 11, 12, 13, 15
-add_executable(TestClipRendering "src/TestClipRendering.cpp")
-target_link_libraries(TestClipRendering ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
+# Lesson 11, 12, 13, 15, 16
+add_executable(TestRendering "src/TestRendering.cpp")
+target_link_libraries(TestRendering ${SDL2_LIBRARY} ${SDL2_image_LIBRARY} ${SDL2_ttf_LIBRARY})
 
 # Lesson 14
 add_executable(TestVSync "src/TestVSync.cpp")
