Lesson 20: Force Feedback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,6 @@ target_link_libraries(TestRendering ${SDL2_LIBRARY} ${SDL2_image_LIBRARY} ${SDL2
 add_executable(TestRenderingEx "src/TestRenderingEx.cpp")
 target_link_libraries(TestRenderingEx ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
 
-# Lesson 19
+# Lesson 19, 20
 add_executable(TestJoystick "src/TestJoystick.cpp")
 target_link_libraries(TestJoystick ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
