--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,3 +66,7 @@ target_link_libraries(TestSound PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image
 # Lesson 22, 23, 24, 25
 add_executable(TestTiming "src/test/TestTiming.cpp")
 target_link_libraries(TestTiming PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image_LIBRARY} ${SDL2_ttf_LIBRARY})
+
+# Lesson 26
+add_executable(TestMotion "src/test/TestMotion.cpp")
+target_link_libraries(TestMotion PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
