--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,10 @@ target_link_libraries(TestTiming PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_imag
 add_executable(TestMotion "src/test/TestMotion.cpp")
 target_link_libraries(TestMotion PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
 
-# Lesson 30
+# Lesson 30, 31
 add_executable(TestScrolling "src/test/TestScrolling.cpp")
 target_link_libraries(TestScrolling PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
+
+# Lesson 32
+add_executable(TestTextInput "src/test/TestTextInput.cpp")
+target_link_libraries(TestTextInput PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
