--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,3 +78,7 @@ target_link_libraries(TestScrolling PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_i
 # Lesson 32
 add_executable(TestTextInput "src/test/TestTextInput.cpp")
 target_link_libraries(TestTextInput PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
+
+# Lesson 33
+add_executable(TestFile "src/test/TestFile.cpp")
+target_link_libraries(TestFile PUBLIC core PRIVATE ${SDL2_LIBRARY} ${SDL2_image_LIBRARY})
