Lesson 37: Multiple Displays

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,6 @@ target_link_libraries(TestFile PUBLIC sdl_test)
 add_executable(TestAudioRecording "src/test/TestAudioRecording.cpp")
 target_link_libraries(TestAudioRecording PUBLIC sdl_test)
 
-# Lesson 35, 36
+# Lesson 35, 36, 37
 add_executable(TestWindow "src/test/TestWindow.cpp")
 target_link_libraries(TestWindow PUBLIC sdl_test)
