--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,3 +93,7 @@ target_link_libraries(TestAudioRecording PUBLIC sdl_test)
 # Lesson 35, 36, 37
 add_executable(TestWindow "src/test/TestWindow.cpp")
 target_link_libraries(TestWindow PUBLIC sdl_test)
+
+# Lesson 38
+add_executable(TestParticleEngines "src/test/TestParticleEngines.cpp")
+target_link_libraries(TestParticleEngines PUBLIC sdl_test)
